# dental-notes

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  STATE.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-streaming-capture-and-transcription/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/01.1-phase-1-test-hardening/: 01.1-01-PLAN.md  01.1-01-SUMMARY.md  01.1-02-PLAN.md  01.1-02-SUMMARY.md  01.1-03-PLAN.md  01.1-03-SUMMARY.md  01.1-CONTEXT.md  01.1-RESEARCH.md  01.1-VALIDATION.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: .metadata  analysis_options.yaml  pubspec.yaml
app/lib/: app.dart  main.dart
app/linux/: CMakeLists.txt
app/test/: widget_test.dart
backend/: pyproject.toml
backend/src/dental_notes_backend/: auth.py  config.py  main.py
backend/src/dental_notes_backend/models/: api_models.py
backend/src/dental_notes_backend/prompts/: medication_extract.py  perio_parse.py  soap_note.py
backend/src/dental_notes_backend/routes/: health.py  notes.py  transcribe.py
backend/src/dental_notes_backend/services/: claude_service.py  whisper_service.py
backend/static/: index.html
backend/tests/: conftest.py  test_health.py  test_notes.py  test_rate_limit.py  test_transcribe.py
src/dental_notes/: config.py  health.py  main.py
tests/: conftest.py  test_capture.py  test_chunker.py  test_clinical_integration.py  test_clinical_models.py  test_config.py  test_dictation.py  test_extractor.py  test_health.py  test_hotkey.py  test_main.py  test_note_formatter.py  test_ollama_service.py  test_pipeline_integration.py  test_prompts.py  test_review_routes.py  test_routes.py  test_session_manager.py  test_session_store.py  test_speaker.py  test_speaker_reattribution.py  test_stitcher.py  test_transcript_writer.py  test_vad.py  test_vocab.py  test_whisper_service.py
(+135 files in other folders)
