[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dental-notes"
version = "2.0.0"
description = "Local-first ambient dental note-taking: mic -> streaming Whisper -> SOAP notes"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.0.3",
    "silero-vad>=5.1",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "fastapi[standard]>=0.135.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.3.0",
    "jinja2>=3.1.0",
    "pynput>=1.7.6",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
